--- a/css/style.css
+++ b/css/style.css
@@ -27,12 +27,22 @@ main {
 
 #filters-container {
     margin-top: 100px;
+    
 }
 
-#filters-container>div {
-    margin: 0 50px 0 50px;
+.filters {
+    display: flex;
+}
+
+.filter {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 30px 0 30px;
+}
+
+.filter>label, .filter>input {
     cursor: pointer;
-    display: inline-block;
 }
 
 .hidden {
